レシピ詳細表示、更新、削除機能追加(CRUD完成)

--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -10,7 +10,9 @@
         <div class="media">
             <img src="{% static 'images/01.jpg' %}" class="align-self-center mr-3" alt="..." width="120">
             <div class="media-body">
-                <h5 class="mt-0">{{ recipe.title }}</h5>
+                <a href="{% url 'recipe:detail' recipe.id %}">
+                    <h5 class="mt-0">{{ recipe.title }}</h5>
+                </a>
                 <p>{{ recipe.description }}</p>
             </div>
         </div>
