画像の処理&投稿機能を追加

--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -9,7 +9,11 @@
             <h1>{{ recipe.title }}</h1>
         </div>
         <div class="col-lg-7">
-            <img src="{% static 'images/01.jpg' %}" width="640" class="img-fluid rounded border">
+            {% if recipe.image %}
+                <img src="{{ recipe.detail_main.url }}" width="640" class="img-fluid rounded border">
+            {% else %}
+                <img src="{% static 'images/01.jpg' %}" width="640" class="img-fluid rounded border">
+            {% endif %}
         </div>
         <div class="col-lg-5">
             <h3>作り方</h3>
