--- a/recipe/templates/recipe/recipe_form.html
+++ b/recipe/templates/recipe/recipe_form.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form | crispy }}
 
