--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load imagekit %}
 
 {% block body %}
 
@@ -8,7 +9,12 @@
     {% for recipe in recipe_list %}
 
         <div class="media">
-            <img src="{% static 'images/01.jpg' %}" class="align-self-center mr-3" alt="..." width="120">
+            {% if recipe.image %}
+                {% thumbnail "120x90" recipe.image -- class="align-self-center mr-3" %}
+            {% else %}
+                <img src="{% static 'images/01.jpg' %}"
+                     class="align-self-center mr-3" alt="..." width="120">
+            {% endif %}
             <div class="media-body">
                 <a href="{% url 'recipe:detail' recipe.id %}">
                     <h5 class="mt-0">{{ recipe.title }}</h5>
