--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -5,13 +5,19 @@
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
         <div class="col-lg-7">
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="{% static 'images/01.jpg' %}" alt="" width="940">
+            {% if recipe_top.image %}
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="{{ recipe_top.image.url }}" alt="">
+            {% else %}
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="{% static 'images/01.jpg' %}" alt="">
+            {% endif %}
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-5">
-            <h1 class="font-weight-light">Business Name or Tagline</h1>
-            <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-            <a class="btn btn-primary" href="#">Call to Action!</a>
+            <h1 class="font-weight-light">{{ recipe_top.title }}</h1>
+            <p>{{ recipe_top.description }}</p>
+            {% if recipe_top %}
+            <a class="btn btn-primary" href="{% url 'recipe:detail' recipe_top.id %}">詳細</a>
+            {% endif %}
         </div>
         <!-- /.col-md-4 -->
     </div>
@@ -26,43 +32,25 @@
 
     <!-- Content Row -->
     <div class="row">
-        <div class="col-md-4 mb-5">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h2 class="card-title">Card One</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary btn-sm">More Info</a>
-                </div>
-            </div>
-        </div>
-        <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-5">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h2 class="card-title">Card Two</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary btn-sm">More Info</a>
+        <!-- ▼▼▼ 編集部分 ▼▼▼ -->
+        {% for recipe in recipe_list %}
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    {% if recipe.image %}
+                        <img class="card-img-top" src="{{ recipe.image.url }}" alt="{{ recipe.title }}"/>
+                    {% else %}
+                        <img class="card-img-top" src="{% static 'images/01.jpg' %}" alt="{{ recipe.title }}"/>
+                    {% endif %}
+                    <div class="card-body">
+                        <h2 class="card-title">{{ recipe.title }}</h2>
+                        <p class="card-text">{{ recipe.description }}</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{% url 'recipe:detail' recipe.id %}" class="btn btn-primary btn-sm">詳しく見る</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- /.col-md-4 -->
-        <div class="col-md-4 mb-5">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h2 class="card-title">Card Three</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary btn-sm">More Info</a>
-                </div>
-            </div>
-        </div>
-        <!-- /.col-md-4 -->
-
+        {% endfor %}
     </div>
 
     <!-- /.row -->
