--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 
 {% block body %}
@@ -33,6 +34,29 @@
         </div>
         <div class="col">
             <p class="text-muted">変更日：{{ recipe.modified }}</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <h3>コメント</h3>
+            <ul class="list-unstyled">
+                {% for comment in recipe.comment_set.all %}
+                    <li class="border-bottom mt-2">
+                        {{ comment.content }} -- ({{ comment.created }}
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <form method="post" action="{% url 'comment:create' %}">
+                {% csrf_token %}
+                {{ CommentForm | crispy }}
+                <button type="submit" class="btn btn-primary">送信</button>
+            </form>
         </div>
     </div>
 
