--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -64,8 +64,8 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <a class="btn btn-info" href="{% url 'recipe:update' recipe.id %}">編集</a>
-            <a class="btn btn-danger" href="{% url 'recipe:delete' recipe.id %}">削除</a>
+            <a class="btn btn-info" href="{% url 'adminpage:recipe:update' recipe.id %}">編集</a>
+            <a class="btn btn-danger" href="{% url 'adminpage:recipe:delete' recipe.id %}">削除</a>
         </div>
     </div>
 
